--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-    <link href="/Users/willhorrocks/Documents/Web Projects/RADIOMATIQUE/radiomatique.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Quattrocento 600i" rel="stylesheet">
     <title>radiomatique</title>
 
